// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`addFieldToDefaultExport > should add a field to a multi-line default export 1`] = `
"import { defineConfig } from 'vite';

export default defineConfig({
    plugins: [Example],
    modules: ['example']
});"
`;

exports[`addFieldToDefaultExport > should add a field to a multi-line default export with pre-existing multi-line value 1`] = `
"import { defineConfig } from 'vite';

export default defineConfig({
    modules: [Example, 
        exampleA,
        exampleB,
        exampleC
    ]
});"
`;

exports[`addFieldToDefaultExport > should add a field to a multi-line default export with pre-existing value 1`] = `
"import { defineConfig } from 'vite';

export default defineConfig({
    modules: [Example, 'example']
});"
`;

exports[`addFieldToDefaultExport > should add a field to a single-line default export 1`] = `
"import { defineConfig } from 'vite';

export default defineConfig({
    plugins: [Example],
});"
`;

exports[`addImport > should add a default import to a named multi line import 1`] = `
"import { createApp } from 'vue';
import App from './App.vue';
import Inkline, { IButton, ICheckbox, ILayout } from '@inkline/inkline';

createApp(App)
  .mount('#app');"
`;

exports[`addImport > should insert a default import 1`] = `
"import { createApp } from 'vue';
import App from './App.vue';
import router from './router';
import store from './store';
import Pinia from 'pinia';

createApp(App)
  .use(store)
  .use(router)
  .mount('#app');"
`;

exports[`addImport > should insert a named import 1`] = `
"import { createApp } from 'vue';
import App from './App.vue';
import router from './router';
import store from './store';
import { Inkline } from '@inkline/inkline';

createApp(App)
  .use(store)
  .use(router)
  .mount('#app');"
`;

exports[`addImport > should update a named multi line import 1`] = `
"import { createApp } from 'vue';
import App from './App.vue';
import { IButton, ICheckbox, ILayout, IContainer } from '@inkline/inkline';

createApp(App)
  .mount('#app');"
`;

exports[`addImport > should update a named single line import 1`] = `
"import { createApp, defineComponent } from 'vue';
import App from './App.vue';
import {
    IButton,
    ICheckbox,
    ILayout
} from '@inkline/inkline';

createApp(App)
  .mount('#app');"
`;

exports[`insertImport > should insert a default import 1`] = `
"import { createApp } from 'vue';
import App from './App.vue';
import router from './router';
import store from './store';
import Pinia from 'pinia';

createApp(App)
  .use(store)
  .use(router)
  .mount('#app');"
`;

exports[`insertImport > should insert a import when there are no other imports 1`] = `
"import { Inkline } from '@inkline/inkline';

const a = 1;"
`;

exports[`insertImport > should insert a named import 1`] = `
"import { createApp } from 'vue';
import App from './App.vue';
import router from './router';
import store from './store';
import { createPinia } from 'pinia';

createApp(App)
  .use(store)
  .use(router)
  .mount('#app');"
`;

exports[`insertImport > should insert multiple named imports 1`] = `
"import { createApp } from 'vue';
import App from './App.vue';
import router from './router';
import store from './store';
import { createPinia, defineStore } from 'pinia';

createApp(App)
  .use(store)
  .use(router)
  .mount('#app');"
`;
